samples/_failures_safe/1761598607_b1b3f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1327c65f.c: In function ‘main’:
./samples/SAFE/__tmp_1327c65f.c:152:20: error: missing terminating " character
  152 |             printf("Failed to add edge. Maximum
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1327c65f.c:152:13: error: expected expression at end of input
  152 |             printf("Failed to add edge. Maximum
      |             ^~~~~~
./samples/SAFE/__tmp_1327c65f.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1327c65f.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1327c65f.c:152:13: error: expected declaration or statement at end of input
